Lot of new things

--- a/lang/en.json
+++ b/lang/en.json
@@ -35,7 +35,11 @@
             "summoner": "Invocateur",
             "necro": "Nécromancien",
             "blackMage": "Magie noire de Tzinntch",
-            "metamorph": "Métamorphe"
+            "metamorph": "Métamorphe",
+            "dlul": "Dlul",
+            "youclidh": "Youclidh",
+            "slanoush": "Slanoush",
+            "adathie": "Adathie"
         }
 
 
